KUBERNETES/ingress/canary/demo-2/05-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-test-v2
spec:
  selector:
    app: canary-test-v2
  ports:
  - port: 80
    targetPort: 5678
