KUBERNETES/ingress/canary/demo-2/06-v2-header-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-test-v2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "always"
spec:
  ingressClassName: nginx
  rules:
  - host: canary-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-test-v2
            port:
              number: 80
